<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UrLaB</string>
    <string name="action_settings">Settings</string>
    <string name="urlab_status">Status :</string>
    <string name="status_closed">Closed</string>
    <string name="pamela_status">Who\'s there :</string>
    <string name="action_refresh">Refresh</string>
    <string name="status_open">Open</string>
    <string name="IRC">IRC</string>
    <string name="maps">Maps</string>
    <string name="hidden_alias"> n00bz</string>
    <string name="nobody">Nobody</string>
</resources>
